--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
 	<link href="css/default.css" rel="stylesheet" />
 
-	<script type="text/javascript">
+	<!--script type="text/javascript">
 		// Google Analytics - Please remove this block if you're using this code somehwere.
 		// If you don't remove it it'll mess up my stats
 		var _gaq = _gaq || [];
@@ -17,7 +17,7 @@
 			ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
 			var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
 		})();
-	</script>
+	</script-->
 
 	<script src="//maps.googleapis.com/maps/api/js?v=3.exp&sensor=false&libraries=geometry"></script>
 	<script src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
