--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 	<script src="js/google.maps.LatLngBounds.expand.js"></script>
 	<script src="js/google.maps.LatLngBounds.containsPath.js"></script>
 
-	<script>
+	<!--script>
 
 		/**
 		 * Mercator Puzzle Redux
@@ -246,7 +246,7 @@
 			});
 
 		});
-	</script>
+	</script-->
 </head>
 <body>
 	<a href="https://github.com/bramus/mercator-puzzle-redux"><img style="position: absolute; top: 0; left: 0; border: 0; z-index: 10000;" src="https://s3.amazonaws.com/github/ribbons/forkme_left_orange_ff7600.png" alt="Fork me on GitHub"></a>
