--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 	<script src="js/google.maps.LatLngBounds.expand.js"></script>
 	<script src="js/google.maps.LatLngBounds.containsPath.js"></script>
 
-	<!--script>
+	<script>
 
 		/**
 		 * Mercator Puzzle Redux
@@ -246,11 +246,11 @@
 			});
 
 		});
-	</script-->
+	</script>
 </head>
 <body>
 	<!--a href="https://github.com/bramus/mercator-puzzle-redux"><img style="position: absolute; top: 0; left: 0; border: 0; z-index: 10000;" src="https://s3.amazonaws.com/github/ribbons/forkme_left_orange_ff7600.png" alt="Fork me on GitHub"></a-->
-	<!--div id="map_canvas"></div-->
+	<div id="map_canvas"></div>
 	<div id="quiz">
 		<p><strong>Mercator Puzzle <a href="http://gmaps-samples.googlecode.com/svn/trunk/poly/puzzledrag.html">&para;</a> Redux &mdash; by <a href="http://www.bram.us/">Bramus!</a></strong></p>
 		<p id="message">Drag the shapes to their correct location. If you don't know the position of a country, double click it to let the computer place it. Hit refresh to get a new set of shapes.</p>
