--- a/index.html
+++ b/index.html
@@ -98,10 +98,7 @@
 			var map = new google.maps.Map(document.getElementById('map_canvas'), {
 				zoom: 2,
 				minZoom: 1,
-				maxZoom: 6,
-				disableDoubleClickZoom: true,
-				center: new google.maps.LatLng(35, -20),
-				mapTypeId: google.maps.MapTypeId.TERRAIN
+				maxZoom: 6
 			});
 
 			// Custom map style, borrowed from Gowalla (remember the days!)
